Hier sammeln wir Aenderungsnotizen fuer die aktuelle Firmware (seit dem letzten Release).
Im Fall eines Release dienen die Notizen zum Befüllen des Changelogs im Wiki:
 https://wiki.opennet-initiative.de/wiki/Opennet_Firmware_Versionen
Anschließend kann diese Liste wieder geleert werden.


= Änderungen aus Nutzersicht =
* Funktionalität für öffentliche Zugangspunkte (zuvor: "wifidog") integriert
* Nutzer-VPN-Tunnel wird innerhalb von ca. drei Minuten nach dem Booten aufgebaut (zuvor: ca. acht Minuten)
* keine VPN-Verbindungstests ohne Zertifikat
** weniger Load für Infrastruktur-APs, leichte Verzögerung nach Zertifikatsupload
* verschlüsselte Verbindung mit dem Web-Interface
* Verfallsdatum des eigenen Zertifikats wird angezeigt
* reduzierter RAM-Speicherbedarf
** auf Geräten mit 32 MB RAM gab es zuvor gelegentlich Neustarts durch Speichermangel
* POE-Weiterleitung kann via Web-Interface kontrolliert werden
* Korrekturen:
** lokale IP wird nicht mehr auf 172.16.0.1 zurückgesetzt (falls lokal modifiziert)
** Geschwindigkeitsanzeige in der Gatewayliste hinzugefügt
** korrekte Zeitstempel-Ermittlung für reboot-Logeintrag (/etc/banner)
** gemischte Mesh/lokal-Alias-Interfaces sind nun möglich
** fehlerhafte Sortierung der Gateways behoben

= Interne Änderungen =
* neue CA-Zertifikate sind nun in einem separaten Paket untergebracht
** zuvor führte ein Upgrade nicht zu einer CA-Aktualisierung

= Bemerkenswertes / Fehler / Mängel =