@@ -14,6 +14,7 @@ Anschließend kann diese Liste wieder geleert werden.
 * reduzierter RAM-Speicherbedarf
 ** auf Geräten mit 32 MB RAM gab es zuvor gelegentlich Neustarts durch Speichermangel
 * POE-Weiterleitung kann via Web-Interface kontrolliert werden
+* Status-Seite: Anzahl der Routen für jeden Nachbarn wird angezeigt
 * Korrekturen:
 ** lokale IP wird nicht mehr auf 172.16.0.1 zurückgesetzt (falls lokal modifiziert)
 ** Geschwindigkeitsanzeige in der Gatewayliste hinzugefügt
